Changed POST to GET where necessary.

--- a/app/views/congratulations_mailer/congratulations_email.html.haml
+++ b/app/views/congratulations_mailer/congratulations_email.html.haml
@@ -1,6 +1,4 @@
 %pre
   Hey, you’ve found a treasure, congratulations!
   %br
-  You are
-  = @num
-  treasure hunter who has found the treasure.
+  = "You are #{@num} treasure hunter who has found the treasure."
